--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extract-links",
+  "name": "getting-links-from-markdown",
   "version": "1.0.0",
   "description": "***",
   "main": "index.js",
