--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "directories": {
     "test": "tests"
   },
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "mocha": "^5.2.0"
   },
   "scripts": {
@@ -21,7 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/antaresvalle/gettingLinksFromMarkdown.git"
   },
-  "author": "Antares Valle & Jesica Domínguez",
+  "author": "Antares Valle, Jesica Domínguez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/antaresvalle/gettingLinksFromMarkdown/issues"
